testsuite/poke.pkl/trim-diag-4.pk
/* { dg-do compile } */

defvar a = [1,2][..[1,2]]; /* { dg-error "" } */
